--- a/Fetch1/driver/takeDelivery/takeDelivery.html
+++ b/Fetch1/driver/takeDelivery/takeDelivery.html
@@ -1,5 +1,39 @@
-﻿Package description: pizza
-<br />
-Special instructions: keep it warm
-<br />
+﻿<div class="hidden">{{ page.theme = 'lighter'; }}</div>
+	<div ng-controller="DemoCtrl as demo">
+	<div ng-controller="DeliveryVerificationCtrl as delivery" ng-init="delivery.calculateCost(demo)">
+		<div class="short"></div>
+		PLEASE VERIFY INFO FOR ACURACY
+		<div class="short"></div>
+		<button class="skinnier medium dark fa fa-archive"></button>
+		<span class="skinniest"></span>
+		<div class="window medium wider">
+			I have a {{ demo.size }} {{ demo.weight }} lb package
+		</div>
+		<div class="short"></div>
+		<button class="skinnier medium dark fa fa-arrow-down"></button>
+		<span class="skinniest"></span>
+		<div class="window medium wider">
+			Package to be picked up from {{ demo.pickup }}
+		</div>
+		<div class="short"></div>
+		<button class="skinnier medium dark fa fa-arrow-right"></button>
+		<span class="skinniest"></span>
+		<div class="window medium wider">
+			Package will be delivered to {{ demo.delivery }}
+		</div>
+		<div class="short"></div>
+		<button class="skinnier medium dark fa fa-usd"></button>
+		<span class="skinniest"></span>
+		<div class="window medium wider">
+			Payment ${{ (demo.price * 0.90).toFixed(2); }}
+		</div>
+		<button ng-click="page.back();" class="medium wide stop">
+			REJECT
+		</button>
+		<span class="skinniest"></span>
+		<button ng-click="page.load('driver/gpsPickup/gpsPickup.html');" class="medium wide light">
+			ACCEPT
+		</button>
+	</div>
+</div>
 <button ng-click="page.load('driver/gpsPickup/gpsPickup.html');">Accept</button>
