--- a/Fetch1/driver/takeDelivery/takeDelivery.html
+++ b/Fetch1/driver/takeDelivery/takeDelivery.html
@@ -2,12 +2,12 @@
 	<div ng-controller="DemoCtrl as demo">
 	<div ng-controller="DeliveryVerificationCtrl as delivery" ng-init="delivery.calculateCost(demo)">
 		<div class="short"></div>
-		PLEASE VERIFY INFO FOR ACURACY
+		DELIVERY INFO
 		<div class="short"></div>
 		<button class="skinnier medium dark fa fa-archive"></button>
 		<span class="skinniest"></span>
 		<div class="window medium wider">
-			I have a {{ demo.size }} {{ demo.weight }} lb package
+			A {{ demo.size }} {{ demo.weight }} lb package
 		</div>
 		<div class="short"></div>
 		<button class="skinnier medium dark fa fa-arrow-down"></button>
@@ -36,4 +36,3 @@
 		</button>
 	</div>
 </div>
-<button ng-click="page.load('driver/gpsPickup/gpsPickup.html');">Accept</button>
