--- a/Fetch1/driver/takeDelivery/takeDelivery.html
+++ b/Fetch1/driver/takeDelivery/takeDelivery.html
@@ -31,8 +31,8 @@
 				REJECT
 			</button>
 			<span class="skinniest"></span>
-			<a href="geo:38.897096,-77.036545" class="medium wide light">
+			<button ng-click="window.open('geo:39.220588,-105.327923');" class="medium wide light">
 				ACCEPT
-			</a>
+			</button>
 		</div>
 </div>
