--- a/Fetch1/driver/takeDelivery/takeDelivery.html
+++ b/Fetch1/driver/takeDelivery/takeDelivery.html
@@ -31,7 +31,7 @@
 				REJECT
 			</button>
 			<span class="skinniest"></span>
-			<button ng-click="window.open('geo:39.220588,-105.327923');" class="medium wide light">
+			<button ng-click="window.open('geo:39.220588,-105.327923', '_system');" class="medium wide light">
 				ACCEPT
 			</button>
 		</div>
