--- a/Fetch1/driver/takeDelivery/takeDelivery.html
+++ b/Fetch1/driver/takeDelivery/takeDelivery.html
@@ -31,8 +31,8 @@
 				REJECT
 			</button>
 			<span class="skinniest"></span>
-			<button ng-click="window.open('geo:39.220588,-105.327923', '_system');" class="medium wide light">
+			<a href="geo:39.220588,-105.327923" class="medium wide light">
 				ACCEPT
-			</button>
+			</a>
 		</div>
 </div>
