better open in app handler for directions

--- a/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
+++ b/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
@@ -23,6 +23,7 @@
 			</td>
 		</tr>
 	</table>
+	<textarea style="width: 100%;" placeholder="Comments"></textarea>
 </div>
 <div class="tall"></div>
 <button ng-click="page.load('app/clientType/clientType.html');" class="short wide stop">NO THANKS</button>
