--- a/Fetch1/driver/takeDelivery/takeDelivery.html
+++ b/Fetch1/driver/takeDelivery/takeDelivery.html
@@ -31,7 +31,7 @@
 				REJECT
 			</button>
 			<span class="skinniest"></span>
-			<a ng-href="{{ demo.latLng }}" class="medium wide light">
+			<a ng-href="{{ demo.latLng }}" target="_blank" class="medium wide light">
 			ACCEPT
 			</a>
 		</div>
