quick changes for troy

--- a/Fetch1/driver/takeDelivery/takeDelivery.html
+++ b/Fetch1/driver/takeDelivery/takeDelivery.html
@@ -22,6 +22,10 @@
 				Package will be delivered to {{ demo.delivery }}
 			</div>
 			<div class="short"></div>
+			<div class="window medium widest">
+				Instructions {{ demo.instructions }}
+			</div>
+			<div class="short"></div>
 			<button class="skinnier medium dark fa fa-usd"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
