--- a/Fetch1/driver/takeDelivery/takeDelivery.html
+++ b/Fetch1/driver/takeDelivery/takeDelivery.html
@@ -1,6 +1,6 @@
 ﻿<div class="hidden">{{ page.theme = 'lighter'; page.title = 'DELIVERY' }}</div>
 	<div ng-controller="DemoCtrl as demo">
-		<div ng-controller="TakeDeliveryCtrl as delivery" ng-init="delivery.calculateCost(demo); delivery.getLatLng(demo);">
+		<div ng-controller="TakeDeliveryCtrl as delivery" ng-init="delivery.getLatLng(demo);">
 			<div class="short"></div>
 			DELIVERY INFO
 			<div class="short"></div>
@@ -29,7 +29,7 @@
 			<button class="skinnier medium dark fa fa-usd"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
-				Payment ${{ (demo.price * 0.90).toFixed(2); }}
+				Payment ${{ console.log(demo); (demo.price * 0.90).toFixed(2); }}
 			</div>
 			<button ng-click="page.back();" class="medium wide stop">
 				REJECT
