--- a/Fetch1/customer/2_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_deliveryVerification/deliveryVerification.html
@@ -33,11 +33,11 @@
 				EDIT
 			</button>
 			<span class="skinniest"></span>
-			<button ng-click="page.load('customer/3_trackMap/trackMap.html');" class="medium wide light">
-				Test Without Payment
+			<button ng-click="page.load('customer/2.5_payment/payment.html');" class="medium wide light">
+				Pay With Card
 			</button>
 
-			<form action="" method="POST" class="paymentPosition">
+			<!--form action="" method="POST" class="paymentPosition">
 				<script joe-script src="https://checkout.stripe.com/checkout.js"
 						class="stripe-button"
 						data-key="{{ auth.publishableKey }}"
@@ -47,7 +47,7 @@
 						data-zip-code="true"
 						data-amount="{{ (demo.price * 100) }}">
 				</script>
-			</form>
+			</form-->
 		</div>
 	</div>
 </div>
