--- a/Fetch1/index.html
+++ b/Fetch1/index.html
@@ -5,35 +5,37 @@
 	<title>Fetch1</title>
 
 <!-- injected styles start -->
-	<link href="app/app.css?ver=201507282102" rel="stylesheet" />
-	<link href="app/authentication/authenticate.css?ver=201507282102" rel="stylesheet" />
-	<link href="app/page/animations.css?ver=201507282102" rel="stylesheet" />
+	<link href="app/app.css?ver=201508151642" rel="stylesheet" />
+	<link href="app/authentication/authenticate.css?ver=201508151642" rel="stylesheet" />
+	<link href="app/page/animations.css?ver=201508151642" rel="stylesheet" />
 <!-- injected styles end -->
 
-	<link href="resources/fonts/font-awesome.css?ver=201503191839" rel="stylesheet" />
-	<script src="resources/scripts/angular.js?ver=201503191839"></script>
-	<script src="resources/scripts/angular-animate.js?ver=201503191839"></script>
-	<script src="resources/scripts/angular-touch.js?ver=201503191839"></script>
-	<script src="cordova.js?ver=201503191839"></script>
-	<script src="app/app.js?ver=201503191839"></script>
+	<link href="resources/fonts/font-awesome.css" rel="stylesheet" />
+	<script src="https://js.stripe.com/v2/"></script>
+	<script src="resources/scripts/angular.js"></script>
+	<script src="resources/scripts/angular-animate.js"></script>
+	<script src="resources/scripts/angular-touch.js"></script>
+	<script src="cordova.js"></script>
+	<script src="app/app.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 
 <!-- injected scripts start -->
-	<script src="app/authentication/authenticateController.js?ver=201507282102"></script>
-	<script src="app/devices/android.js?ver=201507282102"></script>
-	<script src="app/GPS/locationService.js?ver=201507282102"></script>
-	<script src="app/GPS/mapController.js?ver=201507282102"></script>
-	<script src="app/GPS/mapService.js?ver=201507282102"></script>
-	<script src="app/page/pageController.js?ver=201507282102"></script>
-	<script src="common/errorHandler/debugController.js?ver=201507282102"></script>
-	<script src="common/errorHandler/errorService.js?ver=201507282102"></script>
-	<script src="common/scriptInjectorDirective/scriptInjectorDirective.js?ver=201507282102"></script>
-	<script src="customer/1_requestDelivery/requestDeliveryControler.js?ver=201507282102"></script>
-	<script src="customer/2_deliveryVerification/deliveryVerificationControler.js?ver=201507282102"></script>
-	<script src="demo/demoController.js?ver=201507282102"></script>
-	<script src="demo/demoService.js?ver=201507282102"></script>
-	<script src="driver/1_pickupMap/pickupMapControler.js?ver=201507282102"></script>
-	<script src="driver/takeDelivery/takeDeliveryControler.js?ver=201507282102"></script>
+	<script src="app/authentication/authenticateController.js?ver=201508151642"></script>
+	<script src="app/devices/android.js?ver=201508151642"></script>
+	<script src="app/GPS/locationService.js?ver=201508151642"></script>
+	<script src="app/GPS/mapController.js?ver=201508151642"></script>
+	<script src="app/GPS/mapService.js?ver=201508151642"></script>
+	<script src="app/page/pageController.js?ver=201508151642"></script>
+	<script src="common/errorHandler/debugController.js?ver=201508151642"></script>
+	<script src="common/errorHandler/errorService.js?ver=201508151642"></script>
+	<script src="common/scriptInjectorDirective/scriptInjectorDirective.js?ver=201508151642"></script>
+	<script src="customer/1_requestDelivery/requestDeliveryControler.js?ver=201508151642"></script>
+	<script src="customer/2.5_payment/paymentControler.js?ver=201508151642"></script>
+	<script src="customer/2_deliveryVerification/deliveryVerificationControler.js?ver=201508151642"></script>
+	<script src="demo/demoController.js?ver=201508151642"></script>
+	<script src="demo/demoService.js?ver=201508151642"></script>
+	<script src="driver/1_pickupMap/pickupMapControler.js?ver=201508151642"></script>
+	<script src="driver/takeDelivery/takeDeliveryControler.js?ver=201508151642"></script>
 <!-- injected scripts end -->
 </head>
 <body>
