--- a/Fetch1/app/authentication/authenticateDriver.html
+++ b/Fetch1/app/authentication/authenticateDriver.html
@@ -1,6 +1,6 @@
 ﻿<div ng-controller="AuthCtrl as auth">
 	<div class="tall"></div>
-	<a href="https://connect.stripe.com/oauth/authorize?response_type=code&client_id={{auth.clientId}}" class="stripe-connect"><img src="../resources/icon/blue-on-light.png" /></a>
+	<a href="https://connect.stripe.com/oauth/authorize?response_type=code&client_id={{auth.clientId}}&state=codejoe007" class="stripe-connect"><img src="../resources/icon/blue-on-light.png" /></a>
 	<div class="short"></div>
 	<button ng-click="page.load('driver/1_pickupMap/pickupMap.html');" class="medium wide light">
 		Test Without Auth
