testing close pattern

--- a/Fetch1/app/authentication/authenticateDriver.html
+++ b/Fetch1/app/authentication/authenticateDriver.html
@@ -3,7 +3,10 @@
 	<button ng-click="page.load('driver/1_pickupMap/pickupMap.html');" class="medium wide light">
 		Test Without Auth
 	</button>
-	<button ng-click="auth.oauth()" class="medium wide light">
+	<button ng-click="auth.oauth()" class="medium wide dark">
 		Login with Stripe
+	</button>
+	<button ng-click="auth.test()" class="medium wide light">
+		Test close pattern
 	</button>
 </div>
