--- a/Fetch1/customer/1_requestDelivery/requestDelivery.html
+++ b/Fetch1/customer/1_requestDelivery/requestDelivery.html
@@ -38,10 +38,16 @@
 				</div>
 				<div class="short"></div>
 			</div>
-			<button ng-disabled="!enableNext" ng-click="page.load('customer/2_deliveryVerification/deliveryVerification.html');" class="wide light">
+			<button ng-disabled="!enableNext" ng-click="delivery.verifyWindow();" class="wide light">
 				SET
 				<br />
 				DELIVERY
+			</button>
+			<button ng-disabled="!enableNext" ng-click="delivery.test();" class="wide light">
+				test
+			</button>
+			<button ng-disabled="!enableNext" ng-click="delivery.close();" class="wide light">
+				close
 			</button>
 			<span class="skinnier"></span>
 			<button class="wide dark" ng-click="special=true;" ng-hide="special">
