--- a/Fetch1/customer/2.5_payment/payment.html
+++ b/Fetch1/customer/2.5_payment/payment.html
@@ -1,82 +1,39 @@
-﻿<!--
-<div class="hidden">{{ page.theme = 'lighter'; page.title = 'MAKE PAYMENT'; }}</div>
-<div ng-controller="DemoCtrl as demo">
-	<div ng-controller="PayCtrl as pay">
-		<form action="" method="POST" name="payment-form">
-			<span class=" payment-errors">
-			</span>
-
-			<div class="form-row">
-				<label>
-					<span>Card Number</span>
-					<input type="text" size="20" data-stripe="number" ng-model="card.number" />
-				</label>
-			</div>
-
-			<div class="form-row">
-				<label>
-					<span>CVC</span>
-					<input type="text" size="4" data-stripe="cvc" ng-model="card.cvc" />
-				</label>
-			</div>
-
-			<div class="form-row">
-				<label>
-					<span>Expiration (MM/YYYY)</span>
-					<input type="text" size="2" data-stripe="exp-month" ng-model="card.exp_month" />
-				</label>
-				<span> / </span>
-				<input type="text" size="4" data-stripe="exp-year" ng-model="card.exp_year" />
-			</div>
-			<input type="text" data-stripe="stripeToken" ng-model="card.stripeToken" />
-			<br />
-			<input type="text" data-stripe="" ng-model="card.amount" ng-init="card.amount = demo.price * 100" />
-			<br />
-			<input type="text" data-stripe="" ng-model="card.currency" ng-init="card.currency = 'usd'" />
-			<br />
-			<input type="text" data-stripe="" ng-model="card.content" ng-init="card.content = demo.content" />
-		</form>
-
-		<button ng-click="pay.submit(card)" class="medium wide light">
-			Submit Payment
-		</button>
-	</div>
-</div>
--->
-
-<!DOCTYPE html>
-<html lang="en" ng-app="Fetch1App" ng-controller="PageCtrl as page" ng-class="page.theme">
+﻿<html>
 <head>
-	<meta charset="utf-8">
-	<title>Fetch1</title>
-
-	<link href="app/app.css?ver=201508161747" rel="stylesheet" />
-	<script src="https://js.stripe.com/v2/"></script>
+	<title>pay</title>
+	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<script src="https://checkout.stripe.com/checkout.js"></script>
 </head>
 <body>
-	<header></header>
-	<nav>
-		<div class="center-v-wrapper">
-			<div class="center-v-cell">
-				Confirm Payment
-			</div>
-		</div>
-	</nav>
-	<div id="content" class="slide-animate-container">
-		<form action="" method="POST" class="paymentPosition">
-			<script joe-script src="https://checkout.stripe.com/checkout.js"
-					class="stripe-button"
-					data-key="pk_test_LDonp15qE0gZigryIcfweU23"
-					data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
-					data-name="FETCH1 TRANSPORT LLC"
-					data-description="Delivery of TODO"
-					data-zip-code="true"
-					data-amount="1000">
-			</script>
-		</form>
-	</div>
-	<footer ng-controller="DebugCtrl as debug">
-		
-	</footer>
+	<button id="customButton">Purchase</button>
+
+	<script>
+		var handler = StripeCheckout.configure({
+			key: 'pk_test_LDonp15qE0gZigryIcfweU23',
+			image: '../../resources/icon/icon.png',
+			locale: 'auto',
+			token: function (token) {
+				alert(token.id);
+				// Use the token to create the charge with a server-side script.
+				// You can access the token ID with `token.id`
+			}
+		});
+
+		$('#customButton').on('click', function (e) {
+			// Open Checkout with further options
+			handler.open({
+				name: 'FETCH1 TRANSPORT LLC',
+				description: '2 widgets',
+				zipCode: true,
+				amount: 2000
+			});
+			e.preventDefault();
+		});
+
+		// Close Checkout on page navigation
+		$(window).on('popstate', function () {
+			handler.close();
+		});
+	</script>
 </body>
 </html>
