--- a/Fetch1/index.html
+++ b/Fetch1/index.html
@@ -20,6 +20,9 @@
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 
 <!-- injected scripts start -->
+	<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+	<script src="https://checkout.stripe.com/checkout.js"></script>
+
 	<script src="app/authentication/authenticateController.js?ver=201508161747"></script>
 	<script src="app/devices/android.js?ver=201508161747"></script>
 	<script src="app/GPS/locationService.js?ver=201508161747"></script>
