you dont succed

--- a/Fetch1/customer/2_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_deliveryVerification/deliveryVerification.html
@@ -34,7 +34,7 @@
 			</button>
 			<span class="skinniest"></span>
 
-			<button ng-click="page.load('customer/2.5_payment/payment.html');" class="medium wide light">
+			<button ng-click="page.load('customer/2_5_payment/payment.html');" class="medium wide light">
 				Pay With Card
 			</button>
 		</div>
