--- a/Fetch1/index.html
+++ b/Fetch1/index.html
@@ -34,7 +34,7 @@
 	<script src="common/errorHandler/errorService.js?ver=201508161747"></script>
 	<script src="common/scriptInjectorDirective/scriptInjectorDirective.js?ver=201508161747"></script>
 	<script src="customer/1_requestDelivery/requestDeliveryControler.js?ver=201508161747"></script>
-	<script src="customer/2.5_payment/paymentControler.js?ver=201508161747"></script>
+	<script src="customer/2_5_payment/paymentControler.js?ver=201508161747"></script>
 	<script src="customer/2_deliveryVerification/deliveryVerificationControler.js?ver=201508161747"></script>
 	<script src="demo/demoController.js?ver=201508161747"></script>
 	<script src="demo/demoService.js?ver=201508161747"></script>
