--- a/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
@@ -34,7 +34,7 @@
 			</button>
 			<span class="skinniest"></span>
 
-			<button ng-click="page.load('customer/2_5_payment/payment.html');" class="medium wide light">
+			<button ng-click="delivery.submit(('Delivery of '+ demo.content), (demo.price * 100), page);" class="medium wide light">
 				Pay With Card
 			</button>
 		</div>
