added wait for driver

--- a/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
@@ -34,8 +34,8 @@
 			</button>
 			<span class="skinniest"></span>
 
-			<button ng-click="delivery.submit(('Delivery of '+ demo.content), (demo.price * 100), page);" class="medium wide light">
-				Pay With Card
+			<button ng-click="page.load('customer/2_5_findDriver/findDriver.html');" class="medium wide light">
+				Confirm
 			</button>
 		</div>
 	</div>
