--- a/Fetch1/driver/1_pickupMap/pickupMap.html
+++ b/Fetch1/driver/1_pickupMap/pickupMap.html
@@ -2,7 +2,7 @@
 <div class="hidden">{{ page.theme = 'darker'; }}</div>
 <div ng-controller="MapController as map">
 	<div ng-controller="PickupMapControler as pickup">
-		<div ng-controller="DemoCtrl as demo" ng-init="pickup.init(demo, page);">
+		<div ng-controller="DeliveryCtrl as demo" ng-init="pickup.init(demo, page);">
 			<div class="short"></div>
 			<div id="map-canvas"></div>
 			Available pickups
