--- a/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
@@ -1,6 +1,6 @@
 ﻿<div class="hidden">{{ page.theme = 'lighter'; }}</div>
 <div ng-controller="AuthCtrl as auth">
-	<div ng-controller="DemoCtrl as demo">
+	<div ng-controller="DeliveryCtrl as demo">
 		<div ng-controller="DeliveryVerificationCtrl as delivery" ng-init="delivery.calculateCost(demo)">
 			<div class="short"></div>
 			PLEASE VERIFY INFO FOR ACURACY
@@ -8,25 +8,25 @@
 			<button class="skinnier medium dark fa fa-archive"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
-				I have a {{ demo.size }} {{ demo.weight }} lb package
+				I have a {{ demo.data.size }} {{ demo.data.weight }} lb package
 			</div>
 			<div class="short"></div>
 			<button class="skinnier medium dark fa fa-arrow-down"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
-				Package to be picked up from {{ demo.pickup }}
+				Package to be picked up from {{ demo.data.pickup }}
 			</div>
 			<div class="short"></div>
 			<button class="skinnier medium dark fa fa-arrow-right"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
-				Package will be delivered to {{ demo.delivery }}
+				Package will be delivered to {{ demo.data.delivery }}
 			</div>
 			<div class="short"></div>
 			<button class="skinnier medium dark fa fa-usd"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
-				Cost of shipment ${{ demo.price }}
+				Cost of shipment ${{ demo.data.price }}
 			</div>
 			<div class="short right-t">I VERIFY THIS</div>
 			<button ng-click="page.back();" class="medium wide stop">
