--- a/Fetch1/driver/takeDelivery/takeDelivery.html
+++ b/Fetch1/driver/takeDelivery/takeDelivery.html
@@ -1,5 +1,5 @@
 ﻿<div class="hidden">{{ page.theme = 'lighter'; page.title = 'DELIVERY' }}</div>
-	<div ng-controller="DemoCtrl as demo">
+	<div ng-controller="DeliveryCtrl as demo">
 		<div ng-controller="TakeDeliveryCtrl as delivery" ng-init="delivery.getLatLng(demo);">
 			<div class="short"></div>
 			DELIVERY INFO
@@ -7,35 +7,35 @@
 			<button class="skinnier medium dark fa fa-archive"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
-				A {{ demo.size }} {{ demo.weight }} lb package
+				A {{ demo.data.size }} {{ demo.data.weight }} lb package
 			</div>
 			<div class="short"></div>
 			<button class="skinnier medium dark fa fa-arrow-down"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
-				Package to be picked up from {{ demo.pickup }}
+				Package to be picked up from {{ demo.data.pickup }}
 			</div>
 			<div class="short"></div>
 			<button class="skinnier medium dark fa fa-arrow-right"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
-				Package will be delivered to {{ demo.delivery }}
+				Package will be delivered to {{ demo.data.delivery }}
 			</div>
 			<div class="short"></div>
 			<div class="window medium widest">
-				Instructions {{ demo.instructions }}
+				Instructions {{ demo.data.instructions }}
 			</div>
 			<div class="short"></div>
 			<button class="skinnier medium dark fa fa-usd"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
-				Payment ${{ console.log(demo); (demo.price * 0.90).toFixed(2); }}
+				Payment ${{ console.log(demo); (demo.data.price * 0.90).toFixed(2); }}
 			</div>
 			<button ng-click="page.back();" class="medium wide stop">
 				REJECT
 			</button>
 			<span class="skinniest"></span>
-			<a ng-href="{{ demo.latLng }}" target="_blank" class="medium wide light">
+			<a ng-href="{{ demo.data.latLng }}" target="_blank" class="medium wide light">
 			ACCEPT
 			</a>
 		</div>
