--- a/Fetch1/customer/2_5_findDriver/findDriver.html
+++ b/Fetch1/customer/2_5_findDriver/findDriver.html
@@ -1,11 +1,12 @@
 ﻿<div class="hidden">{{ page.theme = 'lighter'; }}</div>
 <div ng-controller="FindDriverCtrl as driver">
 	<div ng-controller="DeliveryCtrl as demo" ng-init="driver.init(demo.data)">
+		<div class="tall"></div>
 
 		{{ driver.message }}
-
-		<br />
-
+		
+		<div class="tall"></div>
+		
 		<button ng-click="driver.submit(('Delivery of '+ demo.content), (demo.price * 100), page);" class="medium wide light">
 			Pay With Card
 		</button>
