--- a/Fetch1/index.html
+++ b/Fetch1/index.html
@@ -5,9 +5,8 @@
 	<title>Fetch1</title>
 
 <!-- injected styles start -->
-	<link href="app/app.css?ver=201508221642" rel="stylesheet" />
-	<link href="app/authentication/authenticate.css?ver=201508221642" rel="stylesheet" />
-	<link href="app/page/animations.css?ver=201508221642" rel="stylesheet" />
+	<link href="app/app.css?ver=201508222021" rel="stylesheet" />
+	<link href="app/page/animations.css?ver=201508222021" rel="stylesheet" />
 <!-- injected styles end -->
 
 	<link href="resources/fonts/font-awesome.css" rel="stylesheet" />
@@ -21,23 +20,24 @@
 	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
 
 <!-- injected scripts start -->
-	<script src="app/authentication/authenticateController.js?ver=201508221642"></script>
-	<script src="app/delivery/deliveryController.js?ver=201508221642"></script>
-	<script src="app/delivery/deliveryService.js?ver=201508221642"></script>
-	<script src="app/devices/android.js?ver=201508221642"></script>
-	<script src="app/GPS/locationService.js?ver=201508221642"></script>
-	<script src="app/GPS/mapController.js?ver=201508221642"></script>
-	<script src="app/GPS/mapService.js?ver=201508221642"></script>
-	<script src="app/Numbers/guidService.js?ver=201508221642"></script>
-	<script src="app/page/pageController.js?ver=201508221642"></script>
-	<script src="common/errorHandler/debugController.js?ver=201508221642"></script>
-	<script src="common/errorHandler/errorService.js?ver=201508221642"></script>
-	<script src="common/scriptInjectorDirective/scriptInjectorDirective.js?ver=201508221642"></script>
-	<script src="customer/1_requestDelivery/requestDeliveryControler.js?ver=201508221642"></script>
-	<script src="customer/2_1_deliveryVerification/deliveryVerificationControler.js?ver=201508221642"></script>
-	<script src="customer/2_5_findDriver/findDriverControler.js?ver=201508221642"></script>
-	<script src="driver/1_pickupMap/pickupMapControler.js?ver=201508221642"></script>
-	<script src="driver/takeDelivery/takeDeliveryControler.js?ver=201508221642"></script>
+	<script src="app/config/configService.js?ver=201508222021"></script>
+	<script src="app/delivery/deliveryController.js?ver=201508222021"></script>
+	<script src="app/delivery/deliveryService.js?ver=201508222021"></script>
+	<script src="app/devices/android.js?ver=201508222021"></script>
+	<script src="app/errorHandler/debugController.js?ver=201508222021"></script>
+	<script src="app/errorHandler/errorService.js?ver=201508222021"></script>
+	<script src="app/GPS/locationService.js?ver=201508222021"></script>
+	<script src="app/GPS/mapController.js?ver=201508222021"></script>
+	<script src="app/GPS/mapService.js?ver=201508222021"></script>
+	<script src="app/numbers/guidService.js?ver=201508222021"></script>
+	<script src="app/page/pageController.js?ver=201508222021"></script>
+	<script src="app/scriptInjectorDirective/scriptInjectorDirective.js?ver=201508222021"></script>
+	<script src="customer/1_requestDelivery/requestDeliveryControler.js?ver=201508222021"></script>
+	<script src="customer/2_1_deliveryVerification/deliveryVerificationControler.js?ver=201508222021"></script>
+	<script src="customer/2_5_findDriver/findDriverControler.js?ver=201508222021"></script>
+	<script src="driver/0_authenticat/authenticateController.js?ver=201508222021"></script>
+	<script src="driver/1_pickupMap/pickupMapControler.js?ver=201508222021"></script>
+	<script src="driver/takeDelivery/takeDeliveryControler.js?ver=201508222021"></script>
 <!-- injected scripts end -->
 </head>
 <body>
