--- a/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
+++ b/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
@@ -31,6 +31,6 @@
 	<textarea style="width: 100%;" placeholder="Comments"></textarea>
 </div>
 <div class="tall"></div>
-<button ng-click="page.load('app/clientType/clientType.html');" class="short wide stop">NO THANKS</button>
+<button ng-click="page.load('app/page/start.html');" class="short wide stop">NO THANKS</button>
 <span class="skinnier"></span>
-<button ng-click="page.load('app/clientType/clientType.html');" class="short wide light">RATE</button>
+<button ng-click="page.load('app/page/start.html');" class="short wide light">RATE</button>
