--- a/Fetch1/customer/2_5_findDriver/findDriver.html
+++ b/Fetch1/customer/2_5_findDriver/findDriver.html
@@ -7,7 +7,7 @@
 		
 		<div class="tall"></div>
 		
-		<button ng-click="driver.submit(('Delivery of '+ demo.content), (demo.price * 100), page);" class="medium wide light">
+		<button ng-click="driver.submit(('Delivery of '+ demo.content), (demo.price * 100), page);" class="medium wide light" ng-show="driver.ready">
 			Pay With Card
 		</button>
 	</div>
