--- a/Fetch1/driver/takeDelivery/takeDelivery.html
+++ b/Fetch1/driver/takeDelivery/takeDelivery.html
@@ -29,7 +29,7 @@
 			<button class="skinnier medium dark fa fa-usd"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
-				Payment ${{ console.log(demo); (demo.data.price * 0.90).toFixed(2); }}
+				Payment ${{ (demo.data.price * 0.90).toFixed(2); }}
 			</div>
 			<button ng-click="page.back();" class="medium wide stop">
 				REJECT
