watching real delivery opps

--- a/Fetch1/driver/takeDelivery/takeDelivery.html
+++ b/Fetch1/driver/takeDelivery/takeDelivery.html
@@ -2,7 +2,7 @@
 	<div ng-controller="DeliveryCtrl as demo">
 		<div ng-controller="TakeDeliveryCtrl as delivery" ng-init="delivery.getLatLng(demo);">
 			<div class="short"></div>
-			DELIVERY INFO
+			DELIVERY INFO {{demo.deliveryId}}
 			<div class="short"></div>
 			<button class="skinnier medium dark fa fa-archive"></button>
 			<span class="skinniest"></span>
