--- a/Fetch1/driver/1_pickupMap/pickupMap.html
+++ b/Fetch1/driver/1_pickupMap/pickupMap.html
@@ -3,10 +3,9 @@
 <div ng-controller="MapController as map">
 	<div ng-controller="PickupMapControler as pickup">
 		<div ng-controller="DeliveryCtrl as demo" ng-init="pickup.init(demo, page);">
-			{{demo.myId}}
+			{{pickup.message}}
 			<div class="short"></div>
 			<div id="map-canvas"></div>
-			Available pickups
 		</div>
 	</div>
 </div>
