--- a/Fetch1/driver/1_pickupMap/pickupMap.html
+++ b/Fetch1/driver/1_pickupMap/pickupMap.html
@@ -1,5 +1,4 @@
-﻿<!--button ng-click="page.load('driver/takeDelivery/takeDelivery.html');"-->
-<div class="hidden">{{ page.theme = 'darker'; }}</div>
+﻿<div class="hidden">{{ page.theme = 'darker'; }}</div>
 <div ng-controller="MapController as map">
 	<div ng-controller="PickupMapControler as pickup">
 		<div ng-controller="DeliveryCtrl as demo" ng-init="pickup.init(demo, page);">
