--- a/Fetch1/driver/2_viewDeliver/viewDelivery.html
+++ b/Fetch1/driver/2_viewDeliver/viewDelivery.html
@@ -1,8 +1,8 @@
 ﻿<div class="hidden">{{ page.theme = 'lighter'; page.title = 'DELIVERY' }}</div>
 	<div ng-controller="DeliveryCtrl as demo">
-		<div ng-controller="ViewDeliveryCtrl as delivery" ng-init="delivery.getLatLng(demo);">
+		<div ng-controller="ViewDeliveryCtrl as delivery">
 			<div class="short"></div>
-			DELIVERY INFO {{demo.deliveryId}}
+			DELIVERY {{ demo.data.deliveryId }} INFO
 			<div class="short"></div>
 			<button class="skinnier medium dark fa fa-archive"></button>
 			<span class="skinniest"></span>
