--- a/Fetch1/driver/3_startDelivery/startDelivery.html
+++ b/Fetch1/driver/3_startDelivery/startDelivery.html
@@ -8,5 +8,15 @@
 			Get Driving Instructions to the pickup address<br />
 			{{ demo.data.pickup }}
 		</a>
+		<br />
+		<button class="wide dark" ng-click="start.pickPhoto()" ng-show="start.pickup">
+			Take photo: proof of pick up
+		</button>
+		<img ng-src="start.pickSrc" />
+		<br />
+		<button class="wide dark" ng-click="" ng-show="start.drop">
+			Take photo: proof of drop off
+		</button>
+		<img ng-src="start.dropSrc" />
 	</div>
 </div>
