--- a/Fetch1/driver/3_startDelivery/startDelivery.html
+++ b/Fetch1/driver/3_startDelivery/startDelivery.html
@@ -12,11 +12,11 @@
 		<button class="wide dark" ng-click="start.pickPhoto()" ng-show="start.pickup">
 			Take photo: proof of pick up
 		</button>
-		<img ng-src="start.pickSrc" />
+		<img ng-src="{{start.pickSrc}}" />
 		<br />
 		<button class="wide dark" ng-click="" ng-show="start.drop">
 			Take photo: proof of drop off
 		</button>
-		<img ng-src="start.dropSrc" />
+		<img ng-src="{{start.dropSrc}}" />
 	</div>
 </div>
