--- a/Fetch1/customer/3_trackMap/trackMap.html
+++ b/Fetch1/customer/3_trackMap/trackMap.html
@@ -5,7 +5,9 @@
 			{{ track.message }}
 			<div class="short"></div>
 			<div id="map-canvas"></div>
-			<br />
+			<div class="short"></div>
+			<img ng-src="{{track.pickSrc}}" class="widest" />
+			<img ng-src="{{track.dropSrc}}" class="widest" />
 		</div>
 	</div>
 </div>
