--- a/Fetch1/driver/2_viewDeliver/viewDelivery.html
+++ b/Fetch1/driver/2_viewDeliver/viewDelivery.html
@@ -1,6 +1,6 @@
 ﻿<div class="hidden">{{ page.theme = 'lighter'; page.title = 'DELIVERY' }}</div>
 	<div ng-controller="DeliveryCtrl as demo">
-		<div ng-controller="ViewDeliveryCtrl as delivery">
+		<div ng-controller="ConfigSrvc as config">
 			<div class="short"></div>
 			DELIVERY {{ demo.data.deliveryId }} INFO
 			<div class="short"></div>
@@ -29,7 +29,7 @@
 			<button class="skinnier medium dark fa fa-usd"></button>
 			<span class="skinniest"></span>
 			<div class="window medium wider">
-				Payment ${{ (demo.data.price * 0.90).toFixed(2); }}
+				Payment ${{ (demo.data.price * config.driverCut).toFixed(2); }}
 			</div>
 			<button ng-click="page.back();" class="medium wide stop">
 				REJECT
