--- a/Fetch1/driver/2_viewDeliver/viewDelivery.html
+++ b/Fetch1/driver/2_viewDeliver/viewDelivery.html
@@ -1,6 +1,6 @@
 ﻿<div class="hidden">{{ page.theme = 'lighter'; page.title = 'DELIVERY' }}</div>
 	<div ng-controller="DeliveryCtrl as demo">
-		<div ng-controller="ConfigSrvc as config">
+		<div ng-controller="ViewDeliveryControler as config">
 			<div class="short"></div>
 			DELIVERY {{ demo.data.deliveryId }} INFO
 			<div class="short"></div>
