--- a/Fetch1/customer/3_trackMap/trackMap.html
+++ b/Fetch1/customer/3_trackMap/trackMap.html
@@ -8,11 +8,11 @@
 			<button class="medium widest dark" ng-click="track.AcceptDelivery()" ng-show="track.accept">
 				Click to accept delivery
 			</button>
-			<img ng-src="{{track.dropSrc}}" class="widest" ng-show="track.accept" />
+			<img ng-src="{{track.dropSrc}}" class="wide" ng-show="track.accept" />
 			<div id="map-canvas"></div>
 			
 			<div class="short"></div>
-			<img ng-src="{{track.pickSrc}}" class="widest" />
+			<img ng-src="{{track.pickSrc}}" class="wide" />
 		</div>
 	</div>
 </div>
