--- a/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
+++ b/Fetch1/customer/4_deliveredVerification/deliveredVerification.html
@@ -1,4 +1,4 @@
-﻿<div class="hidden">{{ page.theme = 'dark city'; page.title = 'VERIFY SHIPMENT' }}</div>
+﻿<div class="hidden">{{ page.disableBack = true; page.theme = 'dark city'; page.title = 'VERIFY SHIPMENT' }}</div>
 <div class="tall"></div>
 <div class="tall center-h">
 	<table class="center-h" style="width: 170px; background-color: white; color: black">
