--- a/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
+++ b/Fetch1/customer/2_1_deliveryVerification/deliveryVerification.html
@@ -2,7 +2,7 @@
 	<div ng-controller="DeliveryCtrl as demo">
 	<div ng-controller="DeliveryVerificationCtrl as delivery" ng-init="delivery.calculateCost(demo)">
 		<div class="short"></div>
-		PLEASE VERIFY INFO FOR ACURACY
+		PLEASE VERIFY INFO FOR ACCURACY
 		<div class="short"></div>
 		<button class="skinnier medium dark fa fa-archive"></button>
 		<span class="skinniest"></span>
